<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="85dp"
        android:layout_height="85dp"
        app:cardBackgroundColor="@color/colorAccent">

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/_09_n_august"
            android:textSize="18sp" />
    </androidx.cardview.widget.CardView>



   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:padding="5dp"
       android:layout_height="85dp">

      <RelativeLayout
          android:layout_width="match_parent"
          android:padding="5dp"
          android:layout_height="match_parent">

          <TextView
              android:id="@+id/note_text_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/note_title"
              android:layout_alignParentStart="true"
              android:layout_alignParentEnd="true"
              android:layout_marginStart="7dp"
              android:textSize="21sp"
              />

          <TextView
              android:id="@+id/date"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@id/note_text_title"
              android:layout_marginTop="20dp"
              android:drawableStart="@drawable/ic_baseline_calendar_today_24"
              android:text="@string/_18_august_2020_12_51_pm"
              android:gravity="center"
              android:drawablePadding="5dp"
              android:textSize="14sp" />

          <ImageButton
              android:id="@+id/delete"
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:layout_alignParentEnd="true"
              android:layout_centerInParent="true"
              android:padding="5dp"
              android:src="@drawable/ic_baseline_delete_forever_24"
              android:background="@android:color/transparent"
              android:contentDescription="@string/todo" />

      </RelativeLayout>
   </androidx.cardview.widget.CardView>

</LinearLayout>